--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
 <body>
     <h1>Commiteando algo en github</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta sapiente vero, placeat maxime suscipit minima eveniet laudantium recusandae. Iste facilis natus debitis maxime repellat perferendis sed deserunt. Vero, nihil laborum.</p>
+    <form >
+        <p>Nombre: <input type="text" name="nombre" size="40"></p>
+        <p>Año de nacimiento: <input type="number" name="nacido" min="1900"></p>
+        <p>Sexo:
+          <input type="radio" name="hm" value="h"> Hombre
+          <input type="radio" name="hm" value="m"> Mujer
+        </p>
+        <p>
+          <input type="submit" value="Enviar">
+          <input type="reset" value="Borrar">
+        </p>
+      </form>
 </body>
 </html>
