index con enlace

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
           <input type="reset" value="Borrar">
         </p>
       </form>
+      <a href="sobrenosotros.html">Sobre nosotros</a>
 </body>
 </html>
